--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <script src = "jquery-3.6.0.min.js" charset = "utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
+
+    <h2><i>(STRETCH GOALS...)</i></h2>
+    <button id="equalsButton">Y'all Ready for This?</button>
+    <p></p>
+
   </body>
 </html>
