--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <link rel = "stylesheet" href = "style.css">
     <script src = "jquery-3.6.0.min.js" charset = "utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
