CSS continued 4:11 PM

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
 
-    <h2><i>(STRETCH GOALS...)</i></h2>
-    <button id="equalsButton">Y'all Ready for This?</button>
+    <h2>(STRETCH GOALS)</h2>
+    <br>
+    <div class="center">
+      <button id="equalsButton">Y'all Ready for This?</button>
+    </div>
+
     <p></p>
 
   </body>
